<resources>
    <string name="app_name">GroceryApp</string>

    <string name="language_settings">Language settings</string>
    <string name="products">Products</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="settingstitle">Settings</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="cart">Cart</string>
    <string name="log_out">Log out</string>
    <string name="eng">English</string>
    <string name="swe">Swedish</string>
    <string name="languagesettings">Language Settings</string>
    <string name="all">All</string>
    <string name="stores">Stores</string>
    <string name="favourite">Favourite</string>
    <string name="showing_all">Showing All</string>
    <string name="showing">Showing</string>
    <string name="question1">How do I contact the support?</string>
    <string name="answer1">You can contact us through this email: Groceryapp@support.com</string>
    <string name="question2">How do I delete my account?</string>
    <string name="answer2">Contact the support.</string>
    <string name="question3">How is my data handled?</string>
    <string name="answer3">It is encrypted according to GDPR guidelines</string>
    <string name="question4">How do I change language?</string>
    <string name="answer4">In settings there is a button called "Language settings" press that one and choose your preferred language.</string>
    <string name="question5">question5</string>
    <string name="answer5">answer5</string>
    <string name="question6">question6</string>
    <string name="answer6">answer6</string>
    <string name="log_in">Log in</string>


</resources>