<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="yes"
        app:srcCompat="@drawable/backgroundrect" />

    <ImageView
        android:id="@+id/left"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:adjustViewBounds="true"
        android:contentDescription="yes"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/leftarrow" />
    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingstitle"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_anchor="@id/left"
        android:layout_marginLeft="35dp"
        app:layout_anchorGravity="center" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/languagesettings"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_anchorGravity="center" />

    <ImageView
        android:id="@+id/engbtn"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginTop="135dp"
        android:adjustViewBounds="true"
        android:contentDescription="yes"
        app:srcCompat="@drawable/longrect" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eng"
        android:textSize="22dp"
        android:textColor="#000000"
        app:layout_anchor="@id/engbtn"
        app:layout_anchorGravity="center" />
    <ImageView
        android:id="@+id/swebtn"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginTop="225dp"
        android:adjustViewBounds="true"
        android:contentDescription="yes"
        app:srcCompat="@drawable/longrect" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swe"
        android:textSize="22dp"
        android:textColor="#000000"
        app:layout_anchor="@id/swebtn"
        app:layout_anchorGravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>