<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/backgroundrect"
        android:contentDescription="yes" />

    <ImageView
        android:id="@+id/productbtn"
        android:layout_width="166dp"
        android:layout_height="166dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="94dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/bigrect"
        android:contentDescription="yes" />

    <ImageView
        android:layout_marginLeft="221dp"
        android:layout_marginTop="94dp"
        android:adjustViewBounds="true"
        android:id="@+id/mapbtn"
        android:layout_width="166dp"
        android:layout_height="166dp"
        app:srcCompat="@drawable/bigrect"
        android:contentDescription="yes" />
    <ImageView
        android:id="@+id/searchbtn"
        android:layout_width="166dp"
        android:layout_height="166dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="280dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/bigrect"
        android:contentDescription="yes" />

    <ImageView
        android:layout_marginLeft="221dp"
        android:layout_marginTop="280dp"
        android:adjustViewBounds="true"
        android:id="@+id/favoritesbtn"
        android:layout_width="166dp"
        android:layout_height="166dp"
        app:srcCompat="@drawable/bigrect"
        android:contentDescription="yes" />

    <ImageView
        android:id="@+id/cartbtn"
        android:layout_width="362dp"
        android:layout_height="100dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="466dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/mediumrect"
        android:contentDescription="yes" />

    <ImageView
        android:layout_marginLeft="196dp"
        android:layout_marginTop="586dp"
        android:adjustViewBounds="true"
        android:id="@+id/logoutbtn"
        android:layout_width="126dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/smallrect"
        android:contentDescription="yes" />

    <ImageView
        android:layout_marginLeft="90dp"
        android:layout_marginTop="586dp"
        android:adjustViewBounds="true"
        android:id="@+id/loginbtn"
        android:layout_width="126dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/smallrect"
        android:contentDescription="yes" />

    <ImageView
        android:id="@+id/settingbtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="330dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/circle"
        android:contentDescription="yes" />
    <ImageView
        android:layout_marginLeft="260dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:id="@+id/notifbtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/circle"
        android:contentDescription="yes" />
    <ImageView
        android:layout_marginLeft="265dp"
        android:layout_marginTop="22dp"
        android:adjustViewBounds="true"
        android:id="@+id/imageView10"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/bell"
        android:contentDescription="yes" />
    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="335dp"
        android:layout_marginTop="23dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/cog"
        android:contentDescription="yes" />

    <ImageView
        android:id="@+id/imageproduct"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        app:layout_anchor="@id/productbtn"
        app:layout_anchorGravity="center"
        android:paddingBottom="10dp"
        app:srcCompat="@drawable/product"
        android:contentDescription="yes" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/products"
        android:textColor="@color/black"
        android:textSize="22dp"
        app:layout_anchor="@+id/productbtn"
        android:paddingBottom="50dp"
        app:layout_anchorGravity="center|bottom" />
    <ImageView
        android:id="@+id/imagemap"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        app:layout_anchor="@id/mapbtn"
        app:layout_anchorGravity="center"
        app:srcCompat="@drawable/maps"
        android:contentDescription="yes" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:textSize="22dp"
        android:textColor="@color/black"
        app:layout_anchor="@+id/mapbtn"
        android:paddingBottom="50dp"
        app:layout_anchorGravity="center|bottom" />
    <ImageView
        android:id="@+id/imagesearch"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        app:layout_anchor="@id/searchbtn"
        app:layout_anchorGravity="center"
        android:paddingBottom="10dp"
        app:srcCompat="@drawable/search"
        android:contentDescription="yes" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="22dp"
        android:textColor="@color/black"
        app:layout_anchor="@+id/searchbtn"
        android:paddingBottom="50dp"
        app:layout_anchorGravity="center|bottom" />
    <ImageView
        android:id="@+id/imagestar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        app:layout_anchor="@id/favoritesbtn"
        app:layout_anchorGravity="center"
        android:paddingBottom="10dp"
        app:srcCompat="@drawable/star"
        android:contentDescription="yes" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        android:textSize="22dp"
        android:textColor="@color/black"
        app:layout_anchor="@+id/favoritesbtn"
        android:paddingBottom="50dp"
        app:layout_anchorGravity="center|bottom"/>
    <ImageView
        android:id="@+id/imagecart"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        app:layout_anchor="@id/cartbtn"
        app:layout_anchorGravity="center|top"
        android:paddingTop="70dp"
        android:paddingRight="5dp"
        app:srcCompat="@drawable/cart"
        android:contentDescription="yes" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart"
        android:textSize="22dp"
        android:textColor="@color/black"
        app:layout_anchor="@+id/cartbtn"
        android:paddingBottom="50dp"

        app:layout_anchorGravity="center|bottom" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textColor="@color/black"
        android:textSize="22dp"
        app:layout_anchor="@+id/logoutbtn"
        app:layout_anchorGravity="center" />
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="22dp"
        app:layout_anchor="@+id/loginbtn"
        app:layout_anchorGravity="center" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="21dp"
        android:text="Grocery App"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_anchorGravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>